# LogSentinel

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CurrentTask.md  FutureMap.md  GEMINI.md  Gemini_SDK_Tutorial.md  LICENSE  MVP_ROUND_1.md  Mvp2结项.md  Proxy_Architecture_Refresher.md  README.md  TodoList_Mvp2.md  mvp1_performance_test.sh  performance_test.sh  todolist_Mvp2_1.md  todolist_Mvp2_1_learn.md
.github/workflows/: integration.yml  smoke.yml  unit.yml
ai/: AiProvider.h  AiTypes.h  GeminiApiAi.cpp  GeminiApiAi.h  MockAI.cpp  MockAI.h  README.md
ai/proxy/: main.py  schemas.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.vue  i18n.ts  main.ts  style.css
core/: AnalysisTask.cpp  AnalysisTask.h  LogBatcher.cpp  LogBatcher.h
docs/: AI_CONFIG_INTEGRATION_GUIDE_ZH.md  AI_PROXY_DEV_NOTE_ZH.md  ALERT_TIMING_STRATEGY_ZH.md  API_REFINEMENT.md  API_REQUIREMENTS.md  BACKEND_IMPL_GUIDE.md  BATCH_ANALYSIS_ARCH_ZH.md  BATCH_ANALYSIS_IMPLEMENTATION_NOTES_ZH.md  BUILD_TARGETS_FIX.md  CHANGELOG_AND_TIPS.md  CHANGELOG_ZH.md  CONFIG_CACHING_STRATEGY.md  DATABASE_CHANGE_ANALYSIS_ZH.md  DATABASE_OPTIMIZATION.md  DEMONSTRATION_STRATEGY.md  DEVELOPMENT_PLAN.md  FRONTEND_GUIDE.md  FRONTEND_INTERFACE_ANALYSIS.md  FRONTEND_LOG_LEVELS_ZH.md  FUTURE_ARCHITECTURE.md  KnownIssues.md  LOG_REPO_OPTIMIZATION.md  METRICS_CALCULATION.md  NETWORK_OPTIMIZATION.md  NEXT_STEPS_RECOMMENDATION.md  PERFORMANCE_BENCHMARK.md  PERFORMANCE_PHASE_TEMPLATE.md  PROMPT_LAYERING_NOTES.md  README.md  SETTINGS_DESIGN.md  SETTINGS_MVP5_CLOSURE.md  SETTINGS_MVP5_FIELD_MATRIX.md  SETTINGS_V1_0_0_VALIDATION_CHECKLIST.md  SYSTEM_LIFECYCLE.md  TEST_ASSET_LEDGER.md  TRACE_READ_API_DISCUSSION.md  TRACE_SCHEMA.md  TRACE_WRK_BENCHMARK_GUIDE.md  logsentinel_resume_optimized.md  logsentinel_resume_star_safe.md  (+2 more)
docs/dev-log/: 20251225-feat-timezone.md  20251225-fix-log-level.md  20251229-feat-aiEngine.md  20251229-feat-frontend-refactor-p3-p4.md  20251229-feat-servicemonitor.md  20251229-feat-trace-explorer.md  20251229-feat-traceexplorer-waterfall-fix.md  20251229-feat-traceexplorer.md  20251230-feat-benchmark.md  20260103-chore-config.md  20260104-docs-architecture.md  20260104-docs-task-map.md  20260104-feat-core-trace-session-manager-bootstrap.md  20260104-feat-core-trace-session.md  20260108-feat-core-trace-session-manager.md  20260109-feat-core-trace-session-manager.md  20260109-feat-persistence-sqlite-trace-repo.md  20260109-feat-trace-tag-removal.md  20260222-feat-skill-deep-learning-mode.md  20260225-feat-skill-daily-cpp-bagua.md  20260226-refactor-notification.md  20260302-test-smoke.md  20260303-test-trace-session-manager-placeholder.md  20260304-test-test-assets.md  20260305-feat-core-token-estimator.md  20260306-docs-trace-backpressure.md  20260308-feat-trace-backpressure-verified.md  20260309-perf-trace-benchmark.md  20260310-feat-ai-proxy-concurrency.md  20260312-fix-trace-runtime-stats.md  20260316-fix-trace-primary-flush-logging.md  20260317-feat-trace-read-side.md  20260318-fix-trace-analysis-batch.md  20260319-feat-service-prototype.md  20260323-refactor-service-prototype.md  20260331-feat-wrk-active-pool.md  20260401-refactor-trace-dispatch.md  20260403-test-trace-dispatch.md  20260406-feat-service-runtime.md  20260407-feat-dashboard-system-monitor.md  (+4 more)
docs/part/: 01_meituan_logan.md  04_google_event_driven.md  05_zhihu_high_perf_log.md  07_nanolog_paper.md  09_selectdb_log_analysis.md  11_csdn_high_perf_log_design.md  12_bytehouse_cloud_native.md  13_loghub_datasets.md  14_ieee_loglens.md  15_spectralops_top_tools.md  17_logicmonitor_ai_logs.md  19_splunk_ai_monitoring.md  22_chinese_lstm_vae.md  23_chinese_tcn_lightweight.md  24_chinese_thesis_log_anomaly.md
docs/todo-list/: Todo_Benchmark.md  Todo_CcConnect.md  Todo_ConfigRepository.md  Todo_DailyCppBaguaSkill.md  Todo_DeepLearningMode.md  Todo_Frontend_Refactoring.md  Todo_Phase1_ServiceMonitor.md  Todo_Phase2_TraceExplorer.md  Todo_RepoREADME.md  Todo_ResumeReview.md  Todo_RuntimeDeps_Autostart.md  Todo_Settings_MVP5.md  Todo_SqliteDoubleBuffer.md  Todo_TestAssets.md  Todo_TraceAiProvider.md  Todo_TraceReadSide.md  Todo_TraceRepository.md  Todo_TraceRepository_Test.md  Todo_TraceSessionManager.md  Todo_TraceSessionManager_IntegrationTest.md  Todo_WebhookNotifier.md
document/part/: 02_csdn_ai_log_tools.md  03_ibm_ai_log_analysis.md  04_google_event_driven.md  06_github_cpplog.md  08_nanolog_original_paper.md  10_github_go_logger.md  16_github_logai.md  18_medium_ai_log_analyzer.md  20_arxiv_llm_log_survey.md  21_ssrn_ai_anomaly_rca.md
handlers/: DashboardHandler.cpp  HistoryHandler.cpp  LogHandler.cpp  LogHandler.h
http/: HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  README.md
notification/: INotifier.h  WebhookNotifier.cpp  WebhookNotifier.h
persistence/: README.md  SqliteConfigRepository.cpp  SqliteHelper.h  SqliteLogRepository.cpp  SqliteLogRepository.h  SqlitePersistence.cpp  SqlitePersistence.h
persistence/data/: test_config_persistence.db
server/: .gitignore  CMakeLists.txt  debug_db.py
server/ai/: AiProvider.h  AiTypes.h  GeminiApiAi.cpp  GeminiApiAi.h  MockAI.cpp  MockAI.h  MockTraceAi.cpp  MockTraceAi.h  TraceAiBackend.h  TraceAiFactory.cpp  TraceAiFactory.h  TraceAiProvider.h  TracePromptRenderer.cpp  TracePromptRenderer.h  TraceProxyAi.cpp  TraceProxyAi.h  TraceProxyProtocol.h  requirements.txt
server/core/: AnalysisTask.h  LogBatcher.cpp  LogBatcher.h  ServiceRuntimeAccumulator.cpp  ServiceRuntimeAccumulator.h  SystemRuntimeAccumulator.cpp  SystemRuntimeAccumulator.h  (+6 more)
src/: main.cpp  testServerPoolSqlite.cpp  testWithRouter.cpp  testgemini.cpp  testserver.cpp  testserverPoolSqliteMock.cpp  testserverpool.cpp
tests/: LogBatcher_test.cpp  SqlitePersistence_test.cpp  http_context_test.cpp  integration_gemini_test.py  run_tests.py  test_httpserver.py  test_mvp1.py  test_mvp2.1_gemini.py
threadpool/: README.md  ThreadPool.cpp  ThreadPool.h
ui/: back.html  index.html
util/: README.md  TraceIdGenerator.cpp
(+158 files in other folders)
